salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/Short_Option_Top_Position__c.object-meta.xml
<CustomObject>
    <label>Short Option Top Position</label>
    <nameField>
        <label>Short Option Top Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Short Option Top Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>