salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Add_to_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Contracts__c</fullName>
    <formula>Number_of_Contracts__c *  Positive_Or_Negative_Multiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add to Contracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>