salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Base_Position__c.field-meta.xml
<CustomField>
    <fullName>Base_Position__c</fullName>
    <label>Base Position</label>
    <referenceTo>Base_Position__c</referenceTo>
    <relationshipLabel>Short Option Top Positions</relationshipLabel>
    <relationshipName>Short_Option_Top_Positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>