salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Extrinsic_Value_When_Order_Filled__c.field-meta.xml
<CustomField>
    <fullName>Extrinsic_Value_When_Order_Filled__c</fullName>
    <formula>Order_Fill_Price__c -  Intrinsic_Value_When_Order_Filled__c</formula>
    <label>Extrinsic Value When Order Filled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>