salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <label>Group Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>