salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Intrinsic_Value_When_Order_Filled__c.field-meta.xml
<CustomField>
    <fullName>Intrinsic_Value_When_Order_Filled__c</fullName>
    <formula>Stock_Price_Mid_Calculated__c -  Option_Strike__c</formula>
    <label>Intrinsic Value When Order Filled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>