salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Number_of_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contracts__c</fullName>
    <label>Number of Contracts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>