salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Option_Action__c.field-meta.xml
<CustomField>
    <fullName>Option_Action__c</fullName>
    <label>Short Option Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sell to Open</fullName>
            </value>
            <value>
                <fullName>Buy to Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>