salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Option_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Option_Expiration_Date__c</fullName>
    <label>Short Option Expiration Date</label>
    <type>Date</type>
</CustomField>