salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Option_Order_Principal__c.field-meta.xml
<CustomField>
    <fullName>Option_Order_Principal__c</fullName>
    <formula>Order_Fill_Price__c *  Number_of_Contracts__c * 100 *  Positive_Or_Negative_Multiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Option Order Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>