salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Option_Strike__c.field-meta.xml
<CustomField>
    <fullName>Option_Strike__c</fullName>
    <label>Short Option Strike</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>