salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Order_Date_and_Time_Filled__c.field-meta.xml
<CustomField>
    <fullName>Order_Date_and_Time_Filled__c</fullName>
    <label>Order Date and Time Filled</label>
    <type>DateTime</type>
</CustomField>