salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Order_Fill_Price__c.field-meta.xml
<CustomField>
    <fullName>Order_Fill_Price__c</fullName>
    <label>Order Fill Price</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>