salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Positive_Or_Negative_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Positive_Or_Negative_Multiplier__c</fullName>
    <formula>IF( TEXT(Option_Action__c) = &apos;Sell to Open&apos; , 1, -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Positive Or Negative Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>