salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Stock_Price_High_When_Order_Filled__c.field-meta.xml
<CustomField>
    <fullName>Stock_Price_High_When_Order_Filled__c</fullName>
    <label>Stock Price - High When Order Filled</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>