salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Stock_Price_Mid_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Stock_Price_Mid_Calculated__c</fullName>
    <formula>(Stock_Price_High_When_Order_Filled__c +  Stock_Price_Low_When_Order_Filled__c)/2</formula>
    <label>Stock Price - Mid Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>