salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Symbol__c</fullName>
    <formula>Base_Position__r.Ticker_Symbol__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticker Symbol</label>
    <type>Text</type>
</CustomField>