salesforce-reference/force-app/main/default/objects/Short_Option_Top_Position__c/fields/Total_Extrinsic_at_Expiration_or_Roll__c.field-meta.xml
<CustomField>
    <fullName>Total_Extrinsic_at_Expiration_or_Roll__c</fullName>
    <formula>Extrinsic_Value_When_Order_Filled__c * 100 *  Number_of_Contracts__c *  Positive_Or_Negative_Multiplier__c</formula>
    <label>Total Extrinsic at Expiration or Roll</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>